--- a/index.html
+++ b/index.html
@@ -281,12 +281,12 @@
   <footer>
     <div class="footer-logo"><i class="fas fa-house"></i> DreamHome Loans</div>
     <p>Developed by <b>Jaspreet Singh</b></p>
-    <p>Email: preet.pp984@gmail.com | Mobile: 7589891585</p>
+    <p>Email: sitepanjab@gmail.com | Mobile: 7589891585</p>
     <div class="social-icons">
       <a href="#"><i class="fab fa-facebook"></i></a>
       <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-linkedin"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/jaspreet-singh-1b9b851a3"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.instagram.com/ijassxx?igsh=MTJvd2l4eXhvOHNtZQ=="><i class="fab fa-instagram"></i></a>
     </div>
     <p>&copy; 2025 DreamHome Loans. All Rights Reserved.</p>
   </footer>
